--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,10 @@
-<html>
-	<head>
-		<title>Agnieszka's blog</title>
-	</head>
-	<body>
-		<div>
-			<h1>Django Girls Blog</h1>
+{% extends "blog/base.html" %}
+{% block content %}
+	{% for post in posts%}
+		<div class="post">
+			<div class="date">published: {{ post.published_date }}</div>
+			<h1><a href="{% url "blog.views.post_detail" pk=post.pk %}">{{ post.title }}</a></h1>
+			<p>{{ post.text|linebreaks }}</p>
 		</div>
-
-		<div>
-			{% for post in posts%}
-				<div>
-					<p>published: {{ post.published_date }}</p>
-					<h1>{{ post.title }}</h1>
-					<p>{{ post.text|linebreaks }}</p>
-				</div>
-			{% endfor %}
-		</div>
-	</body>	
-</html>
+	{% endfor %}
+{% endblock content %}
