--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -16,6 +16,11 @@
 h1, h2, h3, h4 {
 	font-family: 'Lobster', cursive;
 }
+
+.buttons{
+	float: right;
+}
+
 .date {
 	float: right;
 	color: #828282;
