--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,8 +10,13 @@
 	<body>
 		<div class="page-header">
 			<h1>				
+				{% if user.is_authenticated %}
 				<a href="{% url "blog.views.post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-				<a href="/">Django Girls Blog</a>
+				<a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+				{% else %}
+				<a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+				{% endif %}
+				<h1><a href="{% url 'blog.views.post_list' %}">Django Girls</a></h1>
 			</h1>
 		</div>
 		<div class="content container">
